# neve

./: Cargo.toml  LICENSE  buf.yaml  flake.nix
.github/: dependabot.yaml
.github/workflows/: ci.yaml  nix-check.yaml
crates/neve-client/: Cargo.toml
crates/neve-client/src/: main.rs
crates/neve-protocol/: Cargo.toml  build.rs
crates/neve-protocol/proto/neve/v1/: neve.proto
crates/neve-protocol/src/: client.rs  lib.rs  server.rs
crates/neve-server/: Cargo.toml
crates/neve-server/src/: main.rs
nix/: checks.nix  devshells.nix
nix/checks/: cargo.nix  misc.nix  proto.nix  toml.nix  typos.nix
