[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
neve-protocol = { path = "crates/neve-protocol" }
rkyv = { version = "0.8.16" }
tokio = { version = "1.52.3", features = ["full"] }

[workspace.metadata.crane]
name = "neve"
