[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1" }
async-stream = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
prost = { version = "0.14" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tonic = { version = "0.14" }
tonic-middleware = { version = "0.4" }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

neve-protocol = { path = "crates/neve-protocol" }
